--- a/themes/hyde/layouts/partials/sidebar.html
+++ b/themes/hyde/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
 
     <ul class="sidebar-nav">
       <li><a href="/">Home</a> </li>
-      {{ range .Site.Menus.main }}
+      {{ range .Site.Menus.footer }}
         <li><a href="{{.URL}}"> {{ .Name }} </a></li>
       {{end}}
     </ul>
