--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -16,7 +16,7 @@
 
     <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
 
-    {{ .Content }}
+    <!--{{ .Content }}-->
   </div>
   {{ end }}
 </div>
